Pressure tab: Chamber scene: Show object weights on the objects in Newtons
Pressure tab: Trapezoid scene: Fixed: drain water doesn't flow very far--you can see it cut off if you change the screen aspect ratio
Pressure tab: Trapezoid scene: Added a drain faucet
Pressure tab: Trapezoid scene: Moved the connecting tube to the bottom to simplify filling/draining issues
Pressure tab: Chamber scene: Masses shouldn't land on the ground over either opening, but instead go back to original position
Pressure tab: Chamber scene: Don't show dotted line while water equalizing--it looks too much like there is something on it when the user removes a block
Pressure tab: Chamber scene: Masses should stack and increase net mass
Pressure tab: Chamber scene: Fixed: Water should equalize after mass removed
Pressure tab: Chamber scene: Weights push down the water
Pressure tab: Chamber scene: Snap to drop site
Pressure tab: Chamber scene: Show a dotted line where masses can be dropped
Pressure tab: Fixed: Number format should change when submerged, not when y<0
Pressure tab: Initial scene: Fixed: dragging bounds for pressure sensors not respected
Pressure tab: Trapezoid scene: Fixed: Pressure doesn't update as water is added
Pressure tab: Chamber scene: Added draggable masses
Pressure tab: hide potted plant for scenes 2-3
Pressure tab: Chamber scene: Added container shape
Pressure tab: Account for gravity in pressure computation
Pressure tab: Trapezoid scene: Added pressure model which accounts for partially filled pool
Pressure tab: Trapezoid scene: Fixed: Water comes out of faucet even when pool is full
Pressure tab: Trapezoid scene: Update faucet fluid color based on the density of the fluid
Pressure tab: Trapezoid scene: Made scene radio buttons non-square
Pressure tab: Trapezoid scene: Fill pool when water flows
Pressure tab: Added water flowing from the faucet as a solid rectangle
Pressure tab: Removed background from radio button strip